2009-10-01  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): remove an unnecessary subshell

2009-10-01  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/unistd.in.h, modules/regexp/glm4/unistd_h.m4:
	* modules/syscalls/gllib/unistd.in.h, modules/syscalls/glm4/unistd_h.m4:
	* gllib/unistd.in.h, glm4/unistd_h.m4: update from gnulib

2009-09-29  Sam Steingold  <sds@gnu.org>

	* configure.in: call AC_SUBST(LIBTOOL_DEPS)
	* makemake.in (libtool): regenerate from LIBTOOL_DEPS

2009-09-30  Sam Steingold  <sds@gnu.org>

	* win32aux.d (fd_read_wont_hang_p): support serial communication
	devices using ClearCommError
	Reported by Angel Popov <angelpopov@yahoo.com>

2009-09-30  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: do not lock packages while iterating over them
	* constsym.d, subr.d (package_iterate_cleanup): remove
	* defs1.lisp (with-package-iterator): roll back changes from 2009-08-28
	(package-iterator-function): ditto
	* package.d: remove extra (LOCKED) field from Package Iterator State
	(PACKAGE-ITERATE): do not lock current package
	(PACKAGE-ITERATE-CLEANUP): remove
	(MAP-SYMBOLS, MAP-EXTERNAL-SYMBOLS): do not lock packages. symtabs have
	"copy-on-rehash" semantics and insertion/deletion is segfaul safe
	(MAP-ALL-SYMBOLS): do not lock individual packages. make a copy of all
	packages list and iterate over it
	* constobj.d (version): revert to old ABI
	* loop.lisp (expand-loop): do not use WRAP-UNWIND-PROTECT when iterating
	over packages

2009-09-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (symbol_value_b): fix MT g++ build

2009-09-29  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out_level): extract from nobject_out

2009-09-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2868147 ]: declaim signals an error on an invalid declaration
	* compiler.lisp (parse-optimize-quality): can be called by DECLAIM,
	so call c-WARN or WARN depending on *COMPILING*

2009-09-27  Bruno Haible  <bruno@clisp.org>
